# ultimateapplybot

./: .dockerignore  .gitignore  DEVELOPMENT_GUIDE.md  Dockerfile  FRONTEND_INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  OAUTH2_SETUP.md  PGADMIN_GUIDE.md  README.md  RUN_APPLICATION_GUIDE.md  SQL_MIGRATION_CHECKLIST.md  SQL_SETUP_GUIDE.md  TESTING_GUIDE.md  design-doc.excalidraw  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup-database.sh  setup-dev.sh  test-app.sh  test-integration.sh
app/: celery_app.py  config.py  main.py  run_email_processing.py
app/api/v1/: activity.py  auth_router.py  email.py  health.py  integrations.py  jobs.py  settings.py  sheets_jobs.py  user_auth.py
app/auth/: graph_auth.py
app/models/: email.py
app/services/: email_parser.py  graph_client.py  postgres_client.py  s3_client.py  sqs_client.py
app/tasks/: __init__.py  decorators.py  email_tasks.py  url_extraction_tasks.py
app/workers/: celery_worker.py
apply_worker/: Dockerfile  Dockerfile.sql  config.py  entrypoint.sh  main.py  requirements.txt  worker.py  worker_sql.py
apply_worker/services/: application.py  google_sheets.py  openai.py  postgres_service.py
career-pilot-dash/: .env.local.example  README.md  index.html  tailwind.config.ts
career-pilot-dash/src/: App.tsx  index.css
career-pilot-dash/src/hooks/: use-activity.ts  use-integrations.ts  use-jobs.ts  use-settings.ts
career-pilot-dash/src/pages/: Activity.tsx  Help.tsx  Index.tsx  (+1 more)
files/: elwinhe_profile.txt
migrations/: 002_add_jobs_and_activity_tables.sql  003_add_users_table.sql  004_fix_auth_tokens_schema.sql  005_add_filter_start_date.sql
outlook-email-looker/: manifest.xml  package-lock.json  webpack.config.js
sqs_consumer/: Dockerfile  Dockerfile.sql  config.py  consumer.py  consumer_sql.py  main.py  requirements.txt
sqs_consumer/services/: google_sheets.py
tests/: conftest.py  test_config.py  test_email_processing.py
tests/e2e/: test_email_processing_flow.py
tests/integration/: test_heath_api.py  test_postgres_integration.py  test_s3_upload.py
tests/models/: test_email.py
tests/services/: test_postgres_client.py  test_s3.py
tests/tasks/: test_email_tasks.py
(+18 files in other folders)
