[project]
name = "emailreader-app"
version = "0.1.0"
description = "A FastAPI app for reading relevant emails."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "python-dotenv",       
    "celery[redis]",
    "redis",
    "httpx",
    "boto3",
    "msal",
    "requests"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 